sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: reassignment to val
        i=1
         ^AlgGnomeSort:11: error: reassignment to val
      else i=i-1
            ^AlgGnomeSort:13: error: reassignment to val
   else i=i+1
         ^